Front-end initial